# krkn-telemetry

./: README.md  app.py  pyproject.toml  zappa_settings.json
.github/workflows/: workflow.yaml
templates/: data_not_found.html  download_template.html  downloads.html  root_directory_template.html  telemetry_files.html  telemetry_folders.html  telemetry_not_found.html
templates/components/: auto_reload.html  bootstrap.html  bootstrap_table.html  clipboard.html  nav_bar.html  search.html
